testinfra/vpctest/eip.tf
resource "aws_eip" "nat_test_1a" {
  vpc = true
}

resource "aws_eip" "nat_test_1b" {
  vpc = true
}
